--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SymbioteCode's Cave</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>SymbioteCode's Cave</h1>
+  <p>Hello!, My Name is SymbioteCode, a begginer coder and nerd.</p>
+  <hr>
+  <h2>Things I'm planning to code.</h2
+  <ul>
+  <li>HTML</li>
+  <li>Python</li>
+  <li>C++</li>
+  </ul>
+  <!-- Project -->
+</body>
+</html>
