--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <li>Python</li>
   <li>C++</li>
   </ul>
+  <img src=".jpg" alt="Description of the image">
+  
   <!-- Project -->
 </body>
 </html>
