--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li>Python</li>
   <li>C++</li>
   </ul>
-  <img src=".jpg" alt="Description of the image">
+  <img src="dither_it_15405.jpg" alt="Description of the image">
   
   <!-- Project -->
 </body>
