--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SymbioteCode's Cave</title>
+  <title>SymbioteCode's Lair</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>SymbioteCode's Cave</h1>
+  <h1>SymbioteCode</h1>
   <p>Hello!, My Name is SymbioteCode, a begginer coder and nerd.</p>
   <hr>
-  <h2>Things I'm planning to code.</h2
-  <ul>
-  <li>HTML</li>
-  <li>Python</li>
-  <li>C++</li>
-  </ul>
-  <img src="https://symbiotecode.github.io/dither_it_15405.jpg" alt="Description of the image">
-  
+  <li><a href="/about">About</a></li>
+
   <!-- Project -->
 </body>
 </html>
