Change title and enhance navigation structure
Updated the title and added a navigation menu with links.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SymbioteCode's Lair</title>
+  <title>SymbioteCode's Den – Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>SymbioteCode</h1>
-  <p>Hello!, My Name is SymbioteCode, a begginer coder and nerd.</p>
-  <hr>
-  <li><a href="/about">About</a></li>
-
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h3>Weclome to my website!</h3>
+    <p>I'm SymbioteCode, a beginner front-end developer, domain lover, and gamer, and artist!</p>
+  </main>
   <!-- Project -->
 </body>
 </html>
