--- a/ɪɴꜰᴇᴄᴛɪᴏɴ.html
+++ b/ɪɴꜰᴇᴄᴛɪᴏɴ.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SymbioteCode's Den – Home</title>
+  <title>ɪɴꜰᴇᴄᴛɪᴏɴ</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
