Update title and add navigation and main content

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SymbioteWeb</title>
+  <title>SymbioteCode — Home</title>
   <link rel="stylesheet" href="style.css">
-  <h1>SymbioteCode</h1>
-  <p>I'm Symbiote Code, a Beginner FrontEnd Developer, Artist, and Gamer!</p>
 </head>
 <body>
+  <h1>SymbioteCode</h1>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h3>Weclome to my website!</h3>
+  </main>
+  <!-- Project -->
+  <script src="main.js></script>
 </body>
 </html>
