Create index.html with initial website layout
Added basic HTML structure for the Plants Vs Dinosaurs website.

--- a/plantsvsdinosaurs/index.html
+++ b/plantsvsdinosaurs/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Plants Vs Dinosuars</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Plants Vs Dinosaurs</h1>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="download.html">Downloads</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h3>Weclome to my website!</h3>
+  </main>
+  <!-- Project -->
+</body>
+</html>
