--- a/plantsvsdinosaurs/index.html
+++ b/plantsvsdinosaurs/index.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
   <main>
-    <h3>Weclome to my website!</h3>
+    <h3>The Official Website for Plants vs Dinosaurs!</h3>
   </main>
   <!-- Project -->
 </body>
